# react_python_graphql_example

./: .gitignore  package.json  readme.md  todo.md
api/: main.py  pyproject.toml
frontend/: .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  relay.config.json  vite.config.ts
frontend/src/: App.tsx  FilmList.tsx  main.tsx
frontend/src/graphql_schema/: local_schema.graphql
